src/main/java/com/example/groject/global/error/ErrorResponse.java
package com.example.groject.global.error;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;

@Getter
@AllArgsConstructor
@Builder
public class ErrorResponse {
    private final int status;
    private final String message;
}
